--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,11 +33,12 @@ jobs:
       - run: ls 
       - name: Deploy
         uses: nogsantos/scp-deploy@master
-          src: ./build/*
-          host: 46.232.248.108
-          remote: /home/max/DungeonsAndDungeonsGameServer
-          user: max
-          key: ${{secrets.PASSWORD}}
+          with:
+            src: ./build/*
+            host: 46.232.248.108
+            remote: /home/max/DungeonsAndDungeonsGameServer
+            user: max
+            key: ${{secrets.PASSWORD}}
       - uses: actions/upload-artifact@v2
         with:
           name: Build-${{ matrix.targetPlatform }}
