--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
+          allowDirtyBuild: true
           targetPlatform: ${{ matrix.targetPlatform }}
           customParameters: -EnableHeadlessMode
       - uses: actions/upload-artifact@v2
