--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Packages/DungeonsAndDungeonsCommon"]
 	path = Packages/DungeonsAndDungeonsCommon
 	url = https://github.com/Mineorbit/DungeonsAndDungeonsCommon
+[submodule "Packages/--force"]
+	path = Packages/--force
+	url = https://github.com/Mineorbit/DungeonsAndDungeonsCommon
